fix: add missing status translations under productManagement.common path

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -907,11 +907,22 @@
       "efb": "EFB",
       "standard": "Standard",
       "marine": "Marine"
+    },
+    "common": {
+      "status": {
+        "new": "NEW",
+        "draft": "Draft",
+        "active": "Active",
+        "pending": "Pending"
+      }
     }
   },
   "common": {
     "status": {
-      "new": "NEW"
+      "new": "NEW",
+      "draft": "Draft",
+      "active": "Active",
+      "pending": "Pending"
     }
   },
   "productCategories": {
